--- a/manifests/03-replicaset.yaml
+++ b/manifests/03-replicaset.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: aurelcanciu/example-app-ruby
+          image: ghcr.io/relu/example-app-ruby
           ports:
             - name: http
               containerPort: 3000
