--- a/manifests/04-deployment.yaml
+++ b/manifests/04-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: app
-          image: aurelcanciu/example-app-ruby
+          image: ghcr.io/relu/example-app-ruby
           ports:
             - containerPort: 3000
               protocol: TCP
