Comprehensive workshop overhaul: beginner-friendly improvements and modern tooling

--- a/apps/ruby/Dockerfile
+++ b/apps/ruby/Dockerfile
@@ -3,7 +3,7 @@ FROM docker.io/ruby:3.4-alpine
 COPY . /app
 WORKDIR /app
 
-RUN gem install rack rackup
+RUN gem install rack rackup webrick
 
 EXPOSE 3000
 
