--- a/apps/python/Dockerfile
+++ b/apps/python/Dockerfile
@@ -1,7 +1,10 @@
 FROM python:3.13-alpine
 
-COPY . /app
+COPY requirements.txt /app/
 WORKDIR /app
+RUN pip install --no-cache-dir -r requirements.txt
+
+COPY app.py /app/
 
 EXPOSE 3000
 
