--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,19 @@ updates:
     commit-message:
       prefix: "ci"
       include: "scope"
+
+  - package-ecosystem: "pip"
+    directory: "/apps/python"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "deps"
+      include: "scope"
+
+  - package-ecosystem: "bundler"
+    directory: "/apps/ruby"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "deps"
+      include: "scope"
