--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -31,3 +31,11 @@ updates:
     commit-message:
       prefix: "deps"
       include: "scope"
+
+  - package-ecosystem: "cargo"
+    directory: "/apps/rust"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "deps"
+      include: "scope"
