--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,7 +1,31 @@
 version: 2
 updates:
   - package-ecosystem: "docker"
-    directory: "/apps"
+    directory: "/apps/python"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "docker"
+      include: "scope"
+
+  - package-ecosystem: "docker"
+    directory: "/apps/ruby"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "docker"
+      include: "scope"
+
+  - package-ecosystem: "docker"
+    directory: "/apps/go"
+    schedule:
+      interval: "weekly"
+    commit-message:
+      prefix: "docker"
+      include: "scope"
+
+  - package-ecosystem: "docker"
+    directory: "/apps/rust"
     schedule:
       interval: "weekly"
     commit-message:
