--- a/.github/workflows/build-images.yml
+++ b/.github/workflows/build-images.yml
@@ -14,6 +14,10 @@ on:
       - 'apps/**'
   workflow_dispatch:
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 env:
   REGISTRY: ghcr.io
 
