--- a/helm/example-app/values.yaml
+++ b/helm/example-app/values.yaml
@@ -36,8 +36,6 @@ service:
 
 ingress:
   enabled: false
-  annotations:
-    kubernetes.io/ingress.class: nginx
   hosts:
     - paths: ['/']
   tls: []
@@ -63,11 +61,5 @@ tolerations: []
 
 affinity: {}
 
-redis:
+valkey:
   enabled: true
-  usePassword: false
-  cluster:
-    enabled: false
-  master:
-    persistence:
-      enabled: false
